--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,13 +4,13 @@ description = "Derivable trait that allows converting a rusqlite row to a struct
 documentation = "https://docs.rs/rusqlite-from-row"
 readme = "README.md"
 version.workspace = true
-authors.workspace = true 
+authors.workspace = true
 edition.workspace = true
-repository.workspace = true 
-homepage.workspace = true 
+repository.workspace = true
+homepage.workspace = true
 license-file.workspace = true
 keywords.workspace = true
-categories.workspace = true 
+categories.workspace = true
 
 [lib]
 doctest = false
@@ -29,8 +29,15 @@ keywords = ["rusqlite", "sqlite", "from-row", "mapper"]
 categories = ["database", "parsing", "data-structures"]
 
 [workspace.dependencies]
-rusqlite-from-row-derive = { path = "rusqlite-from-row-derive", version = "=0.2.0" }
+rusqlite-from-row-derive = { path = "rusqlite-from-row-derive" }
 
 [dependencies]
-rusqlite-from-row-derive.workspace = true
+rusqlite-from-row-derive = { workspace = true }
 rusqlite = "0.29.0"
+serde_json = { version = "*", optional = true }
+chrono = { version = "*", default-features = false, optional = true }
+
+[features]
+default = ["chrono", "serde"]
+chrono = ["dep:chrono"]
+serde = ["dep:serde_json"]
