--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,6 @@
 [package]
-name = "rusqlite-from-row"
-description = "Derivable trait that allows converting a rusqlite row to a struct"
-documentation = "https://docs.rs/rusqlite-from-row"
+name = "rusqlite-mapper"
+description = "Map structs from and to sqlite tables"
 readme = "README.md"
 version.workspace = true
 authors.workspace = true
@@ -16,23 +15,23 @@ categories.workspace = true
 doctest = false
 
 [workspace]
-members = ["rusqlite-from-row-derive"]
+members = ["rusqlite-mapper-derive"]
 
 [workspace.package]
-version = "0.2.0"
-authors = ["Remo Pas <remo.pas22@gmail.com>"]
+version = "0.1.0"
+authors = ["Robert Krahn <robert@kra.hn>", "Remo Pas <remo.pas22@gmail.com>"]
 edition = "2021"
-repository = "https://github.com/remkop22/rusqlite-from-row"
-homepage = "https://github.com/remkop22/rusqlite-from-row"
+repository = "https://github.com/rksm/rusqlite-mapper"
+homepage = "https://github.com/rksm/rusqlite-mapper"
 license-file = "LICENSE"
 keywords = ["rusqlite", "sqlite", "from-row", "mapper"]
 categories = ["database", "parsing", "data-structures"]
 
 [workspace.dependencies]
-rusqlite-from-row-derive = { path = "rusqlite-from-row-derive" }
+rusqlite-mapper-derive = { path = "rusqlite-mapper-derive" }
 
 [dependencies]
-rusqlite-from-row-derive = { workspace = true }
+rusqlite-mapper-derive = { workspace = true }
 rusqlite = "0.29.0"
 serde_json = { version = "*", optional = true }
 chrono = { version = "*", default-features = false, optional = true }
