--- a/rusqlite-mapper-derive/Cargo.toml
+++ b/rusqlite-mapper-derive/Cargo.toml
@@ -1,14 +1,14 @@
 [package]
-name = "rusqlite-from-row-derive"
-description = "Internal proc-macro crate for rusqlite-from-row"
+name = "rusqlite-mapper-derive"
+description = "Internal proc-macro crate for rusqlite-mapper"
 version.workspace = true
-authors.workspace = true 
+authors.workspace = true
 edition.workspace = true
-repository.workspace = true 
-homepage.workspace = true 
+repository.workspace = true
+homepage.workspace = true
 license-file.workspace = true
 keywords.workspace = true
-categories.workspace = true 
+categories.workspace = true
 
 [lib]
 proc-macro = true
